test/bad/functions/call08.px

func f(Int a, Bool b, Char c: 'd', String s: "") def
    return

f(a=6, s="s", c='x')
